[package]
name = "bitcoin365search_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
secp256k1 = { version = "0.27", features = ["rand"] }
ripemd = "0.1.3"
sha2 = "0.10"
base58 = "0.2"
bech32 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.0"
ctrlc = "3.2"
anyhow = "1.0"
primitive-types = { version = "0.12", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
hex = "0.4"
humantime = "2.1"
rand = "0.8"
egui = "0.27"
eframe = "0.27"
rfd = "0.14"
sysinfo = "0.30"
num-bigint = "0.4"
num-traits = "0.2"
rodio = "0.17"
arboard = "3.3"
open = "3.0"
bip39 = { version = "2.0", features = ["rand"] }
bip32 = "0.5"
